@@ -1,3 +1,8 @@
+2018-09-11  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/87172
+	* gfortran.dg/iso_c_binding_only_2.f90: New test case.
+
 2018-09-11  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/87277
