@@ -1,3 +1,10 @@
+2018-09-11  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/87172
+	* resolve.c (resolve_fl_derived): If a type has the 'use_assoc'
+	attribute, then it was declared in another module, so there should be
+	no error that it has not been declared.
+
 2018-09-11  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/87277
